[project]
name = "at-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.3",
    "uvicorn[standard]>=0.32.0",
    "claude-agent-sdk>=0.1.0",
    "pygithub>=2.1.1",
    "pyjwt[crypto]>=2.8.0",
    "nbformat>=5.10.4",
    "marimo>=0.19.9",
]
